# nba-tc-engine

./: --full-page  .gitignore  1oZTvbKap1-_7KgD_GccCtNVj9QPDGXpCIZgv7bAbIwg.docx  AGENTS.md  ALL_GAPS_2026-07-19.md  API_INTEGRATION_REPORT.md  Angelina_Comprehensive_Case_Analysis_20260630.md  Angelina_Crooker_Appeal_Analysis_20260630.md  Angelina_Crooker_Appeal_Letter_DRAFT_20260630.md  Angelina_Crooker_Appeal_Letter_DRAFT_v2_20260630.md  Angelina_Crooker_Formal_Appeal_EDITED_CLEAN.md  Angelina_Dual_Broken_Policy_and_Law_Argument.md  Archi  CLEANUP_REPORT_20260522.md  CLE_vs_NYK_Backtest.md  COMPETITIVE_IMPROVEMENTS.md  GAPS_LIST_2026-07-19.md  INTEGRATION_CHECKLIST_20260623.md  INTERRUPTION_REPORT.md  INVENTORY.md  MGL_71_37H_Duty_Language_Neutral.md  Mirror_Workbook_Edits.md  NBA_TC_Complete_Integration_Report.md  NBA_TC_Dashboard_Corrections_Report.md  NBA_TC_Integration_Report.md  NBA_TC_Playoffs_Comprehensive_Backtest_Report.docx  NBA_TC_Playoffs_Comprehensive_Backtest_Report.md  NYK_CLE_TC.docx  NYK_CLE_TC.md  PIPELINE_DIAGNOSTIC_REPORT_2026-06-22.md  PIPELINE_GAPS.md  PIPELINE_GAPS_2026-07-19.md  PIPELINE_SCAN_20260624.md  PIPELINE_STATUS_2026-07-18.md  README.md  README_WORKFLOW.md  SAS_vs_OKC_Game4_BoxScore.md  SPORTS_MODEL_SPEC.md  SYSTEM_MAP.md  SportsTC_Streamlit_App.py  (+58 more)
Skills/sec-edgar/: .gitignore  AGENTS.md  ENGINEERING_PLAN.md  PRD.md  PUBLISHING.md  README.md  SKILL.md  STATUS.md  pyproject.toml
Skills/sec-edgar/prompts/: weekly_fetch.md
Skills/sec-edgar/references/: filing_types.md  section_map.md
Skills/sec-edgar/scripts/: check_indexed.py  llm.py  (+12 more)
(+5077 files in other folders)
