[project]
name = "zo-sec-intelligence"
version = "1.0.0"
description = "Natural-language SEC filing intelligence for Zo Computer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jing Xie", email = "jing@clarionintelligence.com"}
]
keywords = ["sec", "edgar", "filings", "rag", "zo", "intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
sec-fetch = "scripts.fetch:main"
sec-index = "scripts.index:main"
sec-search = "scripts.search:main"
sec-doctor = "scripts.doctor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "/scripts",
    "/prompts",
    "/references",
    "/SKILL.md",
    "/README.md",
]
